; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_yabause.c_YabauseResetNoLoad.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_yabause.c_YabauseResetNoLoad.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSH2 = common dso_local global i32 0, align 4
@HighWram = common dso_local global i32 0, align 4
@LowWram = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @YabauseResetNoLoad() #0 {
  %1 = load i32, i32* @MSH2, align 4
  %2 = call i32 @SH2Reset(i32 %1)
  %3 = call i32 (...) @YabauseStopSlave()
  %4 = load i32, i32* @HighWram, align 4
  %5 = call i32 @memset(i32 %4, i32 0, i32 1048576)
  %6 = load i32, i32* @LowWram, align 4
  %7 = call i32 @memset(i32 %6, i32 0, i32 1048576)
  %8 = call i32 (...) @Cs2Reset()
  %9 = call i32 (...) @ScuReset()
  %10 = call i32 (...) @ScspReset()
  %11 = call i32 (...) @Vdp1Reset()
  %12 = call i32 (...) @Vdp2Reset()
  %13 = call i32 (...) @SmpcReset()
  %14 = load i32, i32* @MSH2, align 4
  %15 = call i32 @SH2PowerOn(i32 %14)
  ret void
}

declare dso_local i32 @SH2Reset(i32) #1

declare dso_local i32 @YabauseStopSlave(...) #1

declare dso_local i32 @memset(i32, i32, i32) #1

declare dso_local i32 @Cs2Reset(...) #1

declare dso_local i32 @ScuReset(...) #1

declare dso_local i32 @ScspReset(...) #1

declare dso_local i32 @Vdp1Reset(...) #1

declare dso_local i32 @Vdp2Reset(...) #1

declare dso_local i32 @SmpcReset(...) #1

declare dso_local i32 @SH2PowerOn(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
